--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.css"
+              "../node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
